<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"                xmlns:tools="http://schemas.android.com/tools"                android:layout_width="match_parent"                android:layout_height="match_parent"                android:paddingLeft="@dimen/activity_horizontal_margin"                android:paddingRight="@dimen/activity_horizontal_margin"                android:paddingTop="@dimen/activity_vertical_margin"                android:paddingBottom="@dimen/activity_vertical_margin"                android:orientation="vertical"    >    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginBottom="5dp"        >        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/icon"            />        <ImageView            android:id="@+id/edit_icon"            android:src="@drawable/user_icon"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            />    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginBottom="5dp"        >        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/edit_name_field"            />        <EditText        android:id="@+id/edit_name"        android:hint="@string/hint_name_field"        android:layout_width="match_parent"        android:layout_height="wrap_content"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginBottom="5dp"        >        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/edit_sex_field"            />        <RadioGroup android:layout_height="wrap_content"                    android:layout_width="wrap_content"                    android:id="@+id/radioSex"                    android:orientation="horizontal"            >            <RadioButton android:text="man"                         android:id="@+id/RadioMan"                         android:checked="true"                         android:layout_height="wrap_content"                         android:layout_width="wrap_content">            </RadioButton>            <RadioButton android:text="woman"                         android:id="@+id/RadioWoman"                         android:layout_width="wrap_content"                         android:layout_height="wrap_content">            </RadioButton>        </RadioGroup>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginBottom="5dp"        >        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/edit_address_field"            />        <EditText            android:id="@+id/edit_address"            android:hint="@string/hint_address_field"            android:layout_width="match_parent"            android:layout_height="wrap_content"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginBottom="5dp"        >        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/edit_email_field"            />        <EditText            android:id="@+id/edit_email"            android:hint="@string/hint_email_field"            android:layout_width="match_parent"            android:layout_height="wrap_content"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginBottom="5dp"        >        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/edit_nation_field"            />        <EditText            android:id="@+id/edit_nation"            android:hint="@string/hint_nation_field"            android:layout_width="match_parent"            android:layout_height="wrap_content"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        >    <Button        android:id="@+id/submit_btn"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:text="@string/submit"        android:textSize="15dp"        android:gravity="center|left"        android:padding="5dp"        />    </LinearLayout></LinearLayout>