<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroller"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <!-- 上半分 start -->
        <RelativeLayout
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:background="@color/white"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/cover_icon"
                />


            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                >

                <ImageView
                    android:id="@+id/my_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/my_icon"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:text=""
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    />

            </RelativeLayout>

        </RelativeLayout>
        <!-- 上半分 end -->



        <!-- 下半分 start -->
        <LinearLayout
            android:id="@+id/underview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/Lavender"
                >
                <Button
                    android:id="@+id/nation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/Lavender"
                    android:text="国籍" />
                <Button
                    android:id="@+id/sex"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:background="@color/Beige"
                    android:text="性別" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_drawer"
                    android:textSize="10dp"
                    android:background="@color/gray"
                    />


            </LinearLayout>



            <LinearLayout
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/clip_mark"
                    android:padding="5dp"
                    />
                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:text="@string/address"
                    android:textSize="15dp"
                    android:gravity="center|left"
                    android:padding="5dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/clip_mark"
                    android:padding="5dp"
                    />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:text="@string/email"
                    android:textSize="15dp"
                    android:gravity="center|left"
                    android:padding="5dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/fr_ttl"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_list"
                    android:layout_gravity="center"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/scrollerhrz"
                android:layout_height="150dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/friend_list"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal"

                >
            </LinearLayout>
            </HorizontalScrollView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_edit_profile"
                    />
                <Button
                    android:id="@+id/new_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_new_profile"
                    />
                <Button
                    android:id="@+id/prof_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_list"
                    />


            </LinearLayout>



        </LinearLayout>
        <!-- 下半分 end -->


    </LinearLayout>



</ScrollView>
